# POR-DD

./: .gitignore  .gitmodules
Enamine_library/: explore.ipynb
FDA_screen/: exploration.ipynb
Tomas_library/: Tomas_library.xlsx  explore.ipynb
any_metric_parser/: Cargo.toml
comparison/: 29-06-remake.ipynb  comparison_PDBBind.ipynb  comparison_cyp_screen.ipynb
complete_testing/: Cargo.toml
continuous_gnina/: testing.ipynb  testing.py
equibind_gnina_vs_glide/: start.ipynb
experiment_scripts/: LIT-PCBA.py  gnina_4_mil_mols.py  multiligand_QA.ipynb  multiligand_QA.py  seed_experiment.py
exploratory_notebooks/: 3qe2_matching.ipynb  LIT-PCBA-equibind.ipynb  app.py  biopython.ipynb  full_gnina_progress.ipynb  mae_parsing.ipynb  multi_ligand.ipynb  multiligand_test.py  poseview_instance.ipynb  pymol.ipynb  reduce_test.ipynb
glide_binding_sites/: explore.ipynb
gnina_binding_sites/: explore.ipynb  site_centers.txt
parser-rust/: Cargo.toml
pybind_test/: boosttest.cpp  compile.sh  example.cpp  lib.hpp  test.ipynb  test.py
pymol_showcase/: pymol_commands.pml  (+1 more)
rust-scripts/LIT-PCBA-parser/: Cargo.toml
rust-scripts/LIT-PCBA-parser/example_data/input/TP53/: best_from_equibind.txt
rust-scripts/LIT-PCBA-parser/src/: compare.rs  lib.rs  main.rs  parse_equibind_data.rs  split.rs
rust-scripts/complete_testing/: Cargo.toml
rust-scripts/complete_testing/src/: filereading.rs  lib.rs  main.rs  middle_split.rs  polarstest.rs  regex_time_test.rs
rust-scripts/sdf_to_parquet/: Cargo.toml  pyproject.toml  test.sh
rust-scripts/sdf_to_parquet/src/: lib.rs  main.rs
(+98 files in other folders)
