[package]
name = "LIT-PCBA-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
flate2 = "1.0.24"
glob = "0.3.0"
lazy_static = "1.4.0"
regex = "1.6.0"
threadpool = "1.8.1"
polars = { version = "0.23.0", features = ["parquet", "lazy", "partition_by", "strings"] }