[package]
name = "complete_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
glob = "0.3.0"
polars = { version = "0.23.0", features = ["parquet", "lazy", "partition_by", "strings"] }
regex = "*"
strings = "0.1.1"
threadpool = "1.8.1"
